Some changes to figure captions

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -100,21 +100,21 @@ To calculate the attributes for a new point, the depth and radius of the parent 
   \centering
   \begin{subfigure}[b]{0.25\textwidth}
     \centering\includegraphics[width=\textwidth]{graphics/pull_weights_marroquim1}
-    \caption{\label{fig:concept:weights_marroquim1}}
+    \caption{}
   \end{subfigure}%
   \begin{subfigure}[b]{0.25\textwidth}
     \centering\includegraphics[width=\textwidth]{graphics/pull_weights_marroquim2}
-    \caption{\label{fig:concept:weights_marroquim2}}
+    \caption{}
   \end{subfigure}%
   \begin{subfigure}[b]{0.25\textwidth}
     \centering\includegraphics[width=\textwidth]{graphics/push_weights_marroquim1}
-    \caption{\label{fig:concept:weights_marroquim3}}
+    \caption{}
   \end{subfigure}%
   \begin{subfigure}[b]{0.25\textwidth}
     \centering\includegraphics[width=\textwidth]{graphics/push_weights_marroquim2}
-    \caption{\label{fig:concept:weights_marroquim4}}
+    \caption{}
   \end{subfigure}
-  \caption{Illustration of the weights used for interpolation during the pull phase (Figures~ \subref{fig:concept:weights_marroquim1} and \subref{fig:concept:weights_marroquim2}) and push phase (Figures~\subref{fig:concept:weights_marroquim3} and \subref{fig:concept:weights_marroquim4}). Figures reprinted from \citet{Marroquim:2007:reconstruction}.}
+  \caption{Illustration of the weights used for interpolation during the pull phase ((a) and (b)) and push phase ((c) and (d)). Figures reprinted from \citet{Marroquim:2007:reconstruction}.}
   \label{fig:concept:weights_marroquim}
 \end{figure}
 
@@ -201,7 +201,7 @@ The clustered shading technique works as follows: First, the view frustum is div
 \begin{figure}[htb]
 \centering
     \includegraphics[width=\textwidth]{graphics/clustered_olsson}
-  \caption{Visualization of clusters and light ranges used for the light assignment step. Figure reprinted from \citet{Olsson:2015:manylightmanagement}.}
+  \caption{Visualization of clusters (cubes) and light ranges (spheres) used for the light assignment step. Each cluster is assigned a list of all lights whose influence spheres are intersecting the cluster. Figure reprinted from \citet{Olsson:2015:manylightmanagement}.}
   \label{fig:concept:clustered_olsson}
 \end{figure}
 
