--- a/chap-implementation.tex
+++ b/chap-implementation.tex
@@ -14,7 +14,7 @@ The full source code is available in the project's repository\footnote{\url{http
 \begin{figure}[htbp]
   \centering
   \includegraphics{graphics/Architecture}
-  \caption{svg image}
+  \caption{An overview of the frameworks, libraries and APIs the presented software depends upon.}
 \end{figure}
 
 The implementation was built using C++ and OpenGL. It uses \textit{gloperate}\footnote{\url{https://github.com/cginternals/gloperate}} as framework, which provides some basic functionality like navigation and resource handling. \textit{gloperate} in turn is based on \textit{Qt}\footnote{\url{https://www.qt.io/}}, which is used for creating an OpenGL context and the UI. \textit{libzeug}\footnote{\url{https://github.com/cginternals/libzeug}} is used to provide GUI widgets for quick manipulation of the rendering parameters.
