--- a/chap-introductionGI.tex
+++ b/chap-introductionGI.tex
@@ -215,7 +215,7 @@ Many-light methods as another means to compute global illumination originate in 
     \includegraphics[width=.48\textwidth]{graphics/many_lights_laine_1} &
     \includegraphics[width=.48\textwidth]{graphics/many_lights_laine_2}\\
   \end{tabular}
-  \caption{Illustration of the many-light concept. (Left) VPLs are created on surfaces that are directly lit by a light source. (Right) when shading a surface point (orange), all VPLs that are visible for that point are used to indirectly light it. Figures reprinted from \citet{laine2007incremental}.}
+  \caption{Illustration of the many-light concept. Left: VPLs are created on surfaces that are directly lit by a light source. Right: When shading a surface point (orange), all VPLs that are visible for that point are used to indirectly light it. Figures reprinted from \citet{laine2007incremental}.}
   \label{fig:intro:many_lights_visualization}
 \end{figure}
 
