--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -186,7 +186,8 @@
 \subsubsection{misc}
 
 \todo[inline]{cleanup repository. rebase and cut the first unrelated commits out? decide on repository name, and maybe github name.}
-\todo[inline,color=white]{formatting requirements? like that comma after e.g. weirdness}
+\todo[inline,color=green]{at least two subsections per section}
+\todo[inline,color=green]{no forward references}
 \todo[inline]{brighter version for print}
 \todo[inline]{cleanup references}
 
