--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -139,28 +139,19 @@
 
 \todo[inline]{do some pseudocode}
 
-\todo[inline,color=white]{many-light theory}
-- focusing on why this is a valid model
-- maybe explain clamping here and leave it out everywhere else?
-
-\todo[inline,color=white]{explain clamping in concept}
-
 \todo[inline]{put VPL shuffling comparison anywhere, maybe results \Cref{sec:results:ism:quality}}
 
-\todo[inline]{ISM quality: Screenshots when enlarging the points / making them smaller. Discuss. \Cref{sec:results:ism:quality}}
+\todo[inline]{4k tests}
 
-\todo[inline]{ISM quality: Screenshots when doing more points. either by tessellation or by collecting more. Discuss. \Cref{sec:results:ism:quality}}
+\todo[inline]{ISM quality: for single-pixel-renderer: maybe show one full-size shadow map to show this *can* work. \Cref{sec:results:ism:quality}}
 
 \todo[inline,color=yellow]{ISMs: point count for splat renderer and output them somehow. \Cref{sec:results:ism:quality}}
 
 \todo[inline]{ISM comparison: Add notes about scaling when i have point counts \Cref{sec:results:ism:comparison}}
 
-\todo[inline]{ISM quality: for single-pixel-renderer: maybe show one full-size shadow map to show this *can* work. \Cref{sec:results:ism:quality}}
-
-
 \todo[inline]{ISM performance: Numbers when enlarging the points / making them smaller. Discuss. Note how the single-pixel renderer is (hopefully) not affected by point size. \Cref{sec:results:ism:quality}}
 
-\todo[inline]{ISM performance: Numbers when doing more points. either by tessellation or by collecting more. Discuss. \Cref{sec:results:ism:quality}}
+\todo[inline]{ISM quality / performance: Screenshots and performance numbers when doing more points. either by tessellation or by collecting more. Discuss. \Cref{sec:results:ism:quality}}
 
 
 
@@ -168,19 +159,13 @@
 
 \todo[inline,color=yellow]{implement some moving object. show temporal coherency when it moves. or even moving spherical light. \Cref{sec:results:ism}}
 
-\todo[inline,color=yellow]{fixed blue noise pattern when sampling RSM?}
-
 \todo[inline,color=yellow]{rename gi shader to final gathering. other renames?}
-
-\todo[inline]{4k tests}
 
 \todo[inline,color=yellow]{investigate into interleaving via shared memory in 2x2 groups (that is, one work group reads 2x2 interleaved pixels instead of one)}
 
-\todo[inline,color=yellow]{implement that area thing \Cref{sec:impl:ismRendering}}
-
 \todo[inline,color=yellow]{implement ISM max quality. every point into every ISM. likely render everything once for each ISM. a checkbox: when checked, compute high-quality once and do not change. back to normal when unchecked. \Cref{sec:results:ism:quality}}
 
-\todo[inline]{ISM performance: Impact of packing? \Cref{sec:results:ism:performanceSinglePixelRenderer}}
+\todo[inline,color=yellow]{ISM performance: Impact of packing? \Cref{sec:results:ism:performanceSinglePixelRenderer}}
 
 
 \subsubsection{misc}
