Make GI concept pipeline nicer

--- a/chap-concept.tex
+++ b/chap-concept.tex
@@ -9,10 +9,12 @@ In this chapter, the presented global illumination system is explained on a conc
 \label{sec:concept:overview}
 
 \begin{figure}[h]
-    \includegraphics[width=\textwidth]{graphics/GI_pipeline_concept_rough}
+    \includegraphics[width=\textwidth]{graphics/GI_pipeline_concept}
     \caption{The global illumination pipeline presented in this thesis.}
     \label{fig:GIPipelineConcept}
 \end{figure}
+
+\todo{ mention parts of final gathering somewhere in the text/caption}
 
 
 \Cref{fig:GIPipelineConcept} provides an overview of the global illumination pipeline presented in this thesis.
